[package]
name = "ziggurat-core-crawler"
version = "0.1.1"
edition = "2021"

homepage = "https://github.com/runziggurat/ziggurat-core"
repository = "https://github.com/runziggurat/ziggurat-core"

description = "A crawler package for ziggurat-based projects"

[dependencies]
serde = { version = "1", features = ["derive"] }

