[package]
name = "ziggurat-core-geoip"
version = "0.1.0"
edition = "2021"

homepage = "https://github.com/runziggurat/ziggurat-core"
repository = "https://github.com/runziggurat/ziggurat-core"

description = "GeoIP localization package for Ziggurat"

[dependencies]
ipinfo = "0.5.1"
ipgeolocate = "0.3.5"
ip2location = "0.3.5"

[dependencies.tokio]
version = "1"
features = ["full"]