[package]
name = "ziggurat-core-geoip"
version = "0.1.5"
edition = "2021"

homepage = "https://github.com/runziggurat/ziggurat-core"
repository = "https://github.com/runziggurat/ziggurat-core"

description = "GeoIP localization package for Ziggurat"

[dependencies]
async-trait = "0.1.63"
geoutils = "0.5.1"
ip2location = "0.3.5"
ipgeolocate = "0.3.5"
ipinfo = "0.5.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }

[dependencies.tokio]
version = "1.24"
features = ["full"]
