[package]
name = "ziggurat-core-metrics"
version = "0.1.2"
edition = "2021"

homepage = "https://github.com/runziggurat/ziggurat-core"
repository = "https://github.com/runziggurat/ziggurat-core"

description = "Metrics package for ziggurat based projects"

[dependencies]
histogram = "0.6.9"
metrics = "0.20.1"
metrics-util = "0.14.0"
tabled = "0.10"